# one_pr_man

./: .gitignore  Feature.md  README.md  requirements.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_story.yml
Learn_docs/: All about Bucket monitor.md  All_about_Bucket_monitor.ipynb  Suggestion_Query.md  bucket_monitor_setup.py  opensearch_analyzers_cheat_sheet.md  opensearch_query_dsl_cheat_sheet.md
OpenSearch_Management/: .gitignore  Makefile  README.md  pyproject.toml
OpenSearch_Management/docs/: Architecture.md  design_pattern.md  dev.md  developmentflow.md  security_audit.md  usage_guide.md
OpenSearch_Management/src/opensearch_management/: __init__.py  cli.py  client.py  config.py  log_setup.py
OpenSearch_Management/src/opensearch_management/core/: __init__.py
OpenSearch_Management/src/opensearch_management/logic/: index_analysis.py  index_operations.py
OpenSearch_Management/tests/: test_cli.py  test_client.py  test_config.py
docs/: opensearch_analyzers.ipynb  opensearch_analyzers_cheat_sheet.md  opensearch_query_dsl.ipynb  opensearch_search_features.ipynb  opensearch_search_features_cheat_sheet.md  optimal_query_generation.ipynb  optimal_query_generation.md
neural_search/: FUTURE_HOST_README.md  NEURAL_README.md  README.md  future_host_neural_search.ipynb  neural_search_tutorial.ipynb  patroni_neural_search.ipynb
